[package]
name = "codedetection-telegram"
version = "0.2.0"
authors = ["Alexander Zaitsev <zamazan4ik@tut.by>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
log = "0.4.8"
pretty_env_logger = "0.4.0"
regex = "1.3.9"
teloxide = { git = "https://github.com/teloxide/teloxide", branch = "fix-bot-silence" }
tokio = "0.2.21"

[profile.release]
lto = true
