[package]
name = "codedetection-telegram"
version = "0.3.0"
authors = ["Alexander Zaitsev <zamazan4ik@tut.by>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
once_cell = "1.4.1"
once-cell-regex = "0.1.1"
pretty_env_logger = "0.4.0"
regex = "1.3.9"
teloxide = "0.3.1"
tokio = { version = "0.2.22", features = ["rt-threaded", "macros"] }

[profile.release]
lto = true
